--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,10 @@
     <title>Marvel Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
-    <h1>Welcome to the Marvel Quiz App!</h1>
+    <div class="title">
+      <h1>Marvel Quiz App</h1>
+    </div>
   </body>
 </html>
