--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
         </div>
       </div>
     </div>
+    <!-- image  -->
+    <div class="profile-page">
+      <img id="profile-image" src="default-profile.jpg" alt="profile-image" />
+      <h2>I am an industrial engineer</h2>
+    </div>
 
+    <!-- footer? -->
     <footer>
       <nav>
         <ul class="navbar">
